--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="stylesheet" href="css/main.css">
-
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -73,10 +71,7 @@
       </footer>
     </div> <!-- /container -->        
     
-    	<script src="js/vendor/jquery-1.11.1.min.js"></script>
+    	<script src="js/dist/all.min.js"></script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-
-        <script src="js/main.js"></script>
     </body>
 </html>
