--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
         <link rel="stylesheet" href="css/main.css">
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -73,10 +72,7 @@
       </footer>
     </div> <!-- /container -->        
     
-    	<script src="js/vendor/jquery-1.11.1.min.js"></script>
 
-        <script src="js/vendor/bootstrap.min.js"></script>
-
-        <script src="js/main.js"></script>
+        <script src="js/dist/all.min.js"></script>
     </body>
 </html>
